--- a/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_all_worker_sub10.ipynb
+++ b/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_all_worker_sub10.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "# import data\n",
     "#df = pd.read_csv(\"..\\\\data\\\\all_worker_sub10.csv\")\n",
-    "df = pd.read_csv(\"../../data/all_worker_sub10.csv\") #mac\n",
+    "df = pd.read_csv(\"00-easy_hard_question_cutoff/data/all_worker_sub10.csv\") #mac\n",
     "# Keep only the columns with certain names\n",
     "columns_to_keep = ['Median', 'direction_pct', 'question_type']\n",
     "#columns_to_keep = ['Mean', 'Median', 'Mode', 'SD', 'direction_pct','complete_time_median', 'complete_time_sd', 'question_type']\n",
