--- a/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_easypass_sub10.ipynb
+++ b/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_easypass_sub10.ipynb
@@ -39,7 +39,7 @@
     "from sklearn.model_selection import KFold, LeaveOneOut, cross_val_score\n",
     "\n",
     "# import data\n",
-    "df = pd.read_csv(\"../../data/easypass_sub10.csv\")\n",
+    "df = pd.read_csv(\"00-easy_hard_question_cutoff/data/easypass_sub10.csv\")\n",
     "filtering = \"easypass\"\n",
     "sample = \"10\"\n",
     "# Keep only the columns with certain names\n",
