--- a/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_pass2_sub15.ipynb
+++ b/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_pass2_sub15.ipynb
@@ -39,7 +39,7 @@
     "from sklearn.model_selection import KFold, LeaveOneOut, cross_val_score\n",
     "\n",
     "# import data\n",
-    "df = pd.read_csv(\"../../data/pass2_sub15.csv\")\n",
+    "df = pd.read_csv(\"00-easy_hard_question_cutoff/data/pass2_sub15.csv\")\n",
     "filtering = \"pass2\"\n",
     "sample = \"15\"\n",
     "# Keep only the columns with certain names\n",
