--- a/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_all_worker_sub20.ipynb
+++ b/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_all_worker_sub20.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "\n",
     "# import data\n",
-    "df = pd.read_csv(\"../../data/all_worker_sub20.csv\")\n",
+    "df = pd.read_csv(\"00-easy_hard_question_cutoff/data/all_worker_sub20.csv\")\n",
     "filtering = \"all_worker\"\n",
     "sample = \"20\"\n",
     "# Keep only the columns with certain names\n",
