--- a/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_cl_all_sub10.ipynb
+++ b/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_cl_all_sub10.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "#test\n",
     "# import data\n",
-    "df = pd.read_csv(\"../../data/cl_all_sub10.csv\")\n",
+    "df = pd.read_csv(\"00-easy_hard_question_cutoff/data/cl_all_sub10.csv\")\n",
     "filtering = \"cl_all\"\n",
     "sample = \"10\"\n",
     "# Keep only the columns with certain names\n",
