--- a/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_cl_all_sub15.ipynb
+++ b/00-easy_hard_question_cutoff/code/decision_tree/Decision tree_cl_all_sub15.ipynb
@@ -43,7 +43,7 @@
     "from sklearn.model_selection import KFold, LeaveOneOut, cross_val_score\n",
     "\n",
     "# import data\n",
-    "df = pd.read_csv(\"../../data/cl_all_sub15.csv\")\n",
+    "df = pd.read_csv(\"00-easy_hard_question_cutoff/data/cl_all_sub15.csv\")\n",
     "filtering = \"cl_all\"\n",
     "sample = \"15\"\n",
     "# Keep only the columns with certain names\n",
